# LinearAlgebra

./: CMakeLists.txt  README.md
include/LinearAlgebra/: dot.h
src/: axpy.cpp  dot.cpp  spmv.cpp
test/: axpy.cpp  copy.cpp  cstuff.cpp  dot.cpp  scal.cpp
